--- a/com.framework/pom.xml
+++ b/com.framework/pom.xml
@@ -41,9 +41,9 @@
 </dependency>
 
 <dependency>
-    <groupId>com.relevantcodes</groupId>
+    <groupId>com.aventstack</groupId>
     <artifactId>extentreports</artifactId>
-    <version>2.41.2</version>
+    <version>4.0.9</version>
 </dependency>
 
 <dependency>
