--- a/com.framework/pom.xml
+++ b/com.framework/pom.xml
@@ -32,6 +32,12 @@
     <version>6.14.3</version>
     <scope>test</scope>
 </dependency>
+
+<dependency>
+    <groupId>org.sikuli</groupId>
+    <artifactId>sikuli-api</artifactId>
+    <version>1.2.0</version>
+</dependency>
      
 <dependency>
     <groupId>org.uncommons</groupId>
@@ -56,6 +62,12 @@
     <groupId>org.apache.poi</groupId>
     <artifactId>poi-ooxml</artifactId>
     <version>3.17</version>
+</dependency>
+
+<dependency>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
+    <version>8.0.16</version>
 </dependency>
 
 </dependencies>
