--- a/com.framework/pom.xml
+++ b/com.framework/pom.xml
@@ -70,5 +70,11 @@
     <version>8.0.16</version>
 </dependency>
 
+<dependency>
+   <groupId>io.github.bonigarcia</groupId>
+   <artifactId>webdrivermanager</artifactId>
+   <version>3.0.0</version>
+</dependency>
+
 </dependencies>
 </project>
