--- a/com.framework/pom.xml
+++ b/com.framework/pom.xml
@@ -20,11 +20,11 @@
     </dependency>
 	
 	<!-- dependency for selenium version -->
-		<dependency>
+	<dependency>
     <groupId>org.seleniumhq.selenium</groupId>
     <artifactId>selenium-java</artifactId>
-    <version>3.141.59</version>
-</dependency>
+    <version>4.0.0-alpha-5</version>
+    </dependency>
  
 <dependency>
     <groupId>org.testng</groupId>
