--- a/com.framework/pom.xml
+++ b/com.framework/pom.xml
@@ -76,5 +76,17 @@
    <version>3.0.0</version>
 </dependency>
 
+<dependency>
+    <groupId>org.json</groupId>
+    <artifactId>json</artifactId>
+    <version>20180130</version>
+</dependency>
+
+<dependency>
+  <groupId>junit</groupId>
+  <artifactId>junit</artifactId>
+  <version>4.13.1</version>
+</dependency>
+
 </dependencies>
 </project>
